--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,15 +5,24 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python Debugger: FastAPI",
+            "name": "Debug FastAPI Project backend: Python Debugger",
             "type": "debugpy",
             "request": "launch",
             "module": "uvicorn",
             "args": [
-                "main:app",
+                "app.main:app",
                 "--reload"
             ],
-            "jinja": false
-        }
+            "cwd": "${workspaceFolder}/backend",
+            "jinja": true,
+            "envFile": "${workspaceFolder}/.env",
+        },
+        {
+            "type": "chrome",
+            "request": "launch",
+            "name": "Debug Frontend: Launch Chrome against http://localhost:8000",
+            "url": "http://localhost:5173",
+            "webRoot": "${workspaceFolder}/backend/frontend"
+        },
     ]
 }
