--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "makefile.configureOnOpen": false
+    "python.testing.pytestArgs": [
+        "."
+    ],
+    "python.testing.cwd": "./backend",
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
